030-software/fluxcd/apps/sftpgo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sftpgo
  labels:
    app: sftpgo
