030-software/fluxcd/apps/sftpgo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
        nfs-genji: "true"
        nfs-hanzo: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: sftpgo
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: sftpgo
      containers:
        - name: sftpgo
          image: ghcr.io/drakkan/sftpgo:v2.7.6-distroless-slim@sha256:483f4ff2e6b6c659b7ec5b4beaa11506665fde1a4528cdeb6b4f4b624c0fff6e
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: ssh
              containerPort: 2022
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/sftpgo/host-keys
              name: temp
            - mountPath: /var/lib/sftpgo
              name: data
            # - mountPath: /etc/sftpgo/host-keys/ssh_host_ed25519_key
            #   name: config
            #   subPath: ssh_host_ed25519_key
            - mountPath: /var/lib/sftpgo/nfs/genji
              name: nfs-genji
            - mountPath: /var/lib/sftpgo/nfs/hanzo
              name: nfs-hanzo
            - mountPath: /var/lib/sftpgo/nfs/downloads
              name: nfs-downloads
          startupProbe:
            tcpSocket:
              port: ssh
          livenessProbe:
            tcpSocket:
              port: ssh
          readinessProbe:
            tcpSocket:
              port: ssh
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: temp
          emptyDir:
            medium: Memory
        - name: data
          emptyDir:
            medium: Memory
        - name: config
          secret:
            secretName: config
        - name: nfs-genji
          nfs:
            path: /
            server: genji.home.arpa
        - name: nfs-hanzo
          nfs:
            path: /
            server: hanzo.home.arpa
        - name: nfs-downloads
          nfs:
            path: /
            server: 10.102.22.211
