030-software/fluxcd/apps/sftpgo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
spec:
  type: ClusterIP
  ports:
    - port: 2022
      targetPort: ssh
      protocol: TCP
      name: ssh
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sftpgo
