030-software/fluxcd/apps/sftpgo/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sftpgo
  annotations:
    dashboard.${domain}/icon:  folder-key-network
    dashboard.${domain}/name: sftpgo
    dashboard.${domain}/url: https://sftpgo.${domain}
spec:
  hostnames:
  - sftpgo.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: sftpgo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
