030-software/fluxcd/apps/sftpgo/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: sftpgo
  annotations:
    external-dns.kubernetes.io/hostname: sftpgo.${domain}
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: sftpgo
  rules:
    - backendRefs:
        - name: sftpgo
          port: 2022
